--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "bootstrap": "4.6.0",
     "chart.js": "2.9.4",
     "classnames": "2.3.1",
+    "formik": "^2.2.9",
     "moment": "2.29.1",
     "node-sass": "6.0.1",
     "node-sass-package-importer": "5.3.2",
@@ -60,7 +61,6 @@
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.3",
     "reactstrap": "8.9.0"
-
   },
   "devDependencies": {
     "gulp": "4.0.2",
