--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "node-sass": "6.0.1",
     "node-sass-package-importer": "5.3.2",
     "nouislider": "15.2.0",
+    "papaparse": "^5.3.1",
     "react": "17.0.2",
     "react-chartjs-2": "2.11.1",
     "react-copy-to-clipboard": "5.0.3",
