--- a/package.json
+++ b/package.json
@@ -60,7 +60,8 @@
     "react-dom": "17.0.2",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.3",
-    "reactstrap": "8.9.0"
+    "reactstrap": "8.9.0",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "gulp": "4.0.2",
