--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "argon-dashboard-react",
   "version": "1.2.1",
@@ -45,6 +46,7 @@
   ],
   "dependencies": {
     "@fortawesome/fontawesome-free": "5.15.3",
+    "axios": "^0.21.1",
     "bootstrap": "4.6.0",
     "chart.js": "2.9.4",
     "classnames": "2.3.1",
