--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "argon-dashboard-react",
   "version": "1.2.1",
@@ -63,6 +62,7 @@
     "react-datepicker": "^4.2.0",
     "react-datetime": "3.0.4",
     "react-dom": "17.0.2",
+    "react-dropzone": "^11.4.0",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.3",
     "reactstrap": "8.9.0",
