--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "argon-dashboard-react",
   "version": "1.2.1",
@@ -49,6 +48,7 @@
     "@material-ui/core": "^4.12.3",
     "axios": "^0.21.1",
     "bootstrap": "4.6.0",
+    "boxicons": "^2.0.9",
     "chart.js": "2.9.4",
     "classnames": "2.3.1",
     "formik": "^2.2.9",
