--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "react-datetime": "3.0.4",
     "react-dom": "17.0.2",
     "react-dropzone": "^11.4.0",
+    "react-file-base64": "^1.0.3",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.3",
     "reactstrap": "8.9.0",
