--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "react-dropzone": "^11.4.0",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.3",
+    "react-to-pdf": "^0.0.14",
     "reactstrap": "8.9.0",
     "yup": "^0.32.9"
   },
