--- a/package.json
+++ b/package.json
@@ -50,6 +50,8 @@
     "bootstrap": "4.6.0",
     "chart.js": "2.9.4",
     "classnames": "2.3.1",
+    "emailjs": "^3.6.0",
+    "emailjs-com": "^3.2.0",
     "formik": "^2.2.9",
     "moment": "2.29.1",
     "node-sass": "6.0.1",
