--- a/package.json
+++ b/package.json
@@ -64,8 +64,10 @@
     "react-dom": "17.0.2",
     "react-dropzone": "^11.4.0",
     "react-file-base64": "^1.0.3",
+    "react-icons": "^4.2.0",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.3",
+    "react-star-rating-component": "^1.4.1",
     "reactstrap": "8.9.0",
     "yup": "^0.32.9"
   },
