--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "axios": "^0.21.1",
     "bootstrap": "4.6.0",
     "boxicons": "^2.0.9",
-    "chart.js": "2.9.4",
+    "chart.js": "^2.9.4",
     "classnames": "2.3.1",
     "formik": "^2.2.9",
     "moment": "2.29.1",
@@ -58,7 +58,7 @@
     "nouislider": "15.2.0",
     "papaparse": "^5.3.1",
     "react": "17.0.2",
-    "react-chartjs-2": "2.11.1",
+    "react-chartjs-2": "^2.11.1",
     "react-copy-to-clipboard": "5.0.3",
     "react-datepicker": "^4.2.0",
     "react-datetime": "3.0.4",
