Completed Sponsorship_Documentation

--- a/package.json
+++ b/package.json
@@ -53,6 +53,8 @@
     "emailjs": "^3.6.0",
     "emailjs-com": "^3.2.0",
     "formik": "^2.2.9",
+    "jspdf": "^2.4.0",
+    "jspdf-autotable": "^3.5.20",
     "moment": "2.29.1",
     "node-sass": "6.0.1",
     "node-sass-package-importer": "5.3.2",
@@ -65,12 +67,12 @@
     "react-datetime": "3.0.4",
     "react-dom": "17.0.2",
     "react-dropzone": "^11.4.0",
-    "react-router-dom": "5.2.0",
-    "react-scripts": "4.0.3",
-    "react-to-pdf": "^0.0.14",
     "react-file-base64": "^1.0.3",
     "react-icons": "^4.2.0",
+    "react-router-dom": "5.2.0",
+    "react-scripts": "4.0.3",
     "react-star-rating-component": "^1.4.1",
+    "react-to-pdf": "^0.0.14",
     "reactstrap": "8.9.0",
     "yup": "^0.32.9"
   },
